--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<a href="#" class="image featured"><img src="images/shrek11.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
-											<h2>SHERK 1</h2>
+											<h2>SHREK 1</h2>
 											
 										</header>
 										<p>Um ogro tem sua vida invadida por personagens de contos de fadas que acabam com a tranquilidade de seu lar. </p><P>Ele faz um acordo pra resgatar uma princesa.</P> 
