--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						
 							<!-- Box -->
 								<section class="box feature">
-									<a href="#" class="image featured"><img src="images/shrek11.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Shrek11.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
 											<h2>SHREK 1</h2>
